--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul class="navbar-nav navbar-nav-hover flex-row align-items-center">
                 <li class="nav-item">
                     <a href="/" class="nav-link" role="button">
-                        <span class="nav-link-inner-text">OpenOrdex <span id="networkName"></span></span>
+                        <span class="nav-link-inner-text">OpenOrdex link <span id="networkName"></span></span>
                     </a>
                 </li>
                 <li class="nav-item">
